--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=https://your-api-url.com/api
+VITE_API_BASE_URL=https://mr-muhridd1n.uz/api/
 VITE_BOT_USERNAME=Trade_Lock_bot
 
 # Telegram Configuration  
