--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,70 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/join/:code",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/trade/:code",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/savdo/:code",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/t/:code",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/admin/(.*)",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "ALLOWALL"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "origin-when-cross-origin"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
+  "functions": {
+    "app/api/**/*.php": {
+      "runtime": "vercel-php@0.6.0"
+    }
+  },
+  "env": {
+    "VITE_API_BASE_URL": "https://mr-muhridd1n.uz/api",
+    "VITE_BOT_USERNAME": "Trade_Lock_bot",
+    "VITE_APP_URL": "https://trade-lock.vercel.app"
+  }
 }
