--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# .env
 VITE_API_BASE_URL=https://mr-muhridd1n.uz/api
 VITE_BOT_USERNAME=Trade_Lock_bot
 VITE_APP_URL=https://trade-lock.vercel.app
+VITE_DEVELOPMENT_MODE=false
