--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:production",
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "vite",
+  "functions": {
+    "app/api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/join/:code",
@@ -42,8 +47,8 @@
           "value": "nosniff"
         },
         {
-          "key": "Referrer-Policy",
-          "value": "origin-when-cross-origin"
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'self' https://web.telegram.org https://webk.telegram.org https://webz.telegram.org https://t.me"
         }
       ]
     },
@@ -56,5 +61,9 @@
         }
       ]
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production",
+    "VITE_DEVELOPMENT_MODE": "false"
+  }
 }
