--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,10 @@
 {
-  "buildCommand": "npm run build:production",
+  "version": 2,
+  "name": "trade-lock",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "vite",
-  "functions": {
-    "app/api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "rewrites": [
     {
       "source": "/join/:code",
@@ -23,6 +20,10 @@
     },
     {
       "source": "/t/:code",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/start",
       "destination": "/index.html"
     },
     {
@@ -48,7 +49,19 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' https://web.telegram.org https://webk.telegram.org https://webz.telegram.org https://t.me"
+          "value": "default-src 'self' 'unsafe-inline' 'unsafe-eval' https://telegram.org https://*.telegram.org https://t.me data: blob:; frame-ancestors 'self' https://web.telegram.org https://webk.telegram.org https://webz.telegram.org https://webk.telegram.org https://webz.telegram.org https://t.me; img-src 'self' data: blob: https:; media-src 'self' blob: https:; connect-src 'self' https://mr-muhridd1n.uz https://api.telegram.org wss:; worker-src 'self' blob:;"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "X-Permitted-Cross-Domain-Policies",
+          "value": "none"
+        },
+        {
+          "key": "Permissions-Policy",
+          "value": "camera=(), microphone=(), geolocation=()"
         }
       ]
     },
@@ -60,10 +73,31 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
+    },
+    {
+      "source": "/*.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    },
+    {
+      "source": "/*.css",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
     }
   ],
   "env": {
     "NODE_ENV": "production",
     "VITE_DEVELOPMENT_MODE": "false"
-  }
+  },
+  "regions": ["fra1"],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
