--- a/vercel.json
+++ b/vercel.json
@@ -1,103 +1,3 @@
 {
-  "version": 2,
-  "name": "trade-lock",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/join/:code",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/trade/:code",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/savdo/:code",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/t/:code",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/start",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/admin/(.*)",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Frame-Options",
-          "value": "ALLOWALL"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self' 'unsafe-inline' 'unsafe-eval' https://telegram.org https://*.telegram.org https://t.me data: blob:; frame-ancestors 'self' https://web.telegram.org https://webk.telegram.org https://webz.telegram.org https://webk.telegram.org https://webz.telegram.org https://t.me; img-src 'self' data: blob: https:; media-src 'self' blob: https:; connect-src 'self' https://mr-muhridd1n.uz https://api.telegram.org wss:; worker-src 'self' blob:;"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        },
-        {
-          "key": "X-Permitted-Cross-Domain-Policies",
-          "value": "none"
-        },
-        {
-          "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=()"
-        }
-      ]
-    },
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/*.js",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400"
-        }
-      ]
-    },
-    {
-      "source": "/*.css",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=86400"
-        }
-      ]
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production",
-    "VITE_DEVELOPMENT_MODE": "false"
-  },
-  "regions": ["fra1"],
-  "cleanUrls": true,
-  "trailingSlash": false
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
